# Hermes-Azure

./: .gitignore  README.md
Chaincode/: contract.go  go.mod
GUI/: package-lock.json  package.json
GUI/keys/: cert.pem
GUI/src/: blockchain.js  index.html  main.js  styles.css
Gateway/: index.js  package-lock.json  package.json
Gateway/keys/: ca.crt  key.pem
base/: CMakeLists.txt  prj.conf
base/src/: main.c
disco_mqtt/: CMakeLists.txt  prj.conf
disco_mqtt/boards/: disco_l475_iot1.overlay
disco_mqtt/src/: main.c
disco_mqtt_2/: CMakeLists.txt  Kconfig  README.md  disco_l475_iot1.overlay  docker-compose.yml  mosquitto-setup.sh  prj.conf
disco_mqtt_2/boards/: disco_l475_iot1.conf
disco_mqtt_2/mosquitto_config/: mosquitto.conf
disco_mqtt_2/src/: device.c  device.h  main.c  mqtt_client.c  mqtt_client.h  wifi_manager.c  wifi_manager.h
mobile/: CMakeLists.txt  prj.conf
mobile/boards/: disco_l475_iot1.overlay  thingy52_nrf52832.overlay
mobile/src/: main.c
mylib/: advertise.c  advertise.h  node_list.c  node_list.h  scan.c  scan.h  wifi.c  wifi.h
mylib/sensors/: accel.c  accel.h  humid.c  humid.h  light.c  light.h  mic.c  mic.h  press.c  press.h  temp.c  temp.h  tvoc.c  tvoc.h
visual/: CMakeLists.txt  m5stack_core2.overlay  prj.conf
visual/boards/: m5stack_core2_procpu.overlay
visual/src/: main.c  ui.c  ui.h  vibration.c  vibration.h  wifi.c  wifi.h
